# vehicle-register

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/registration_plate/: registration_plate.cpp  registration_plate.h
src/ucn/: ucn.cpp  ucn.h
src/vehicle_register/: vehicle_register.cpp  vehicle_register.h
test/: CMakeLists.txt
test/registration_plate/: registration_plate.cpp
test/ucn/: ucn.cpp
test/vehicle_register/: vehicle_register.cpp
